--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -28,70 +28,70 @@ spring:
       #       allowedHeaders: '*'
       #       allowCredentials: true
           
-          routes:
-          # skill-taxonomy service
-            - id: skill-service
-              uri: lb://skill-service
-              predicates:
-                - Path=/api/v1/tags/**
-              filters:
-                - StripPrefix=2
+      routes:
+      # skill-taxonomy service
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/tags/**
+          filters:
+            - StripPrefix=2
 
-            - id: skill-service
-              uri: lb://skill-service
-              predicates:
-                - Path=/api/v1/clusters/**
-              filters:
-                - StripPrefix=2
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/clusters/**
+          filters:
+            - StripPrefix=2
 
-            - id: skill-service
-              uri: lb://skill-service
-              predicates:
-                - Path=/api/v1/atoms/**
-              filters:
-                - StripPrefix=2
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/atoms/**
+          filters:
+            - StripPrefix=2
 
-            - id: skill-service
-              uri: lb://skill-service
-              predicates:
-                - Path=/api/v1/capsules/**
-              filters:
-                - StripPrefix=2
-                
-            - id: skill-service
-              uri: lb://skill-service
-              predicates:
-                - Path=/api/v1/growth-tracks/**
-              filters:
-                - StripPrefix=2
-                
-            - id: skill-service
-              uri: lb://skill-service
-              predicates:
-                - Path=/api/v1/talent-routes/**
-              filters:
-                - StripPrefix=2
-                
-            # user-management service
-            - id: user-management-authentication
-              uri: lb://user-management
-              predicates:
-                - path=/api/v1/auth/**
-
-            - id: user-management-registration
-              uri: lb://user-management
-              predicates:
-                - path=/api/v1/register/**
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/capsules/**
+          filters:
+            - StripPrefix=2
             
-            - id: user-management-roles
-              uri: lb://user-management
-              predicates:
-                - path=/api/v1/roles/**
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/growth-tracks/**
+          filters:
+            - StripPrefix=2
+            
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/talent-routes/**
+          filters:
+            - StripPrefix=2
+            
+        # user-management service
+        - id: user-management-authentication
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/auth/**
 
-            - id: user-management-profiles
-              uri: lb://user-management
-              predicates:
-                - path=/api/v1/users/**
+        - id: user-management-registration
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/register/**
+        
+        - id: user-management-roles
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/roles/**
+
+        - id: user-management-profiles
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/users/**
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
 
