--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -11,7 +11,7 @@ spring:
           discovery:
             locator:
               enabled: true
-              lower-case-service-id: true
+              #lower-case-service-id: true
       # globalcors:
       #   corsConfigurations:
       #     '[/**]':
