--- a/eureka-server.yml
+++ b/eureka-server.yml
@@ -1,3 +1,7 @@
+spring:
+  application:
+    name: eureka-server
+
 eureka:
   client:
     registerWithEureka: ${EUREKA_CLIENT_REGISTER_WITH_EUREKA:false}
