--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -15,7 +15,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins:
+            allowedOriginPatterns:
               - "*" 
                             
             allowedMethods:
