Fix: Use full ECS service name versapath-service-discovery for Eureka connection

--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -105,6 +105,6 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: ${EUREKA_CLIENT_URL:http://service-discovery:8761/eureka}
+      defaultZone: ${EUREKA_CLIENT_URL:http://versapath-service-discovery:8761/eureka}
   instance:
     prefer-ip-address: true
