--- a/lms-service.yml
+++ b/lms-service.yml
@@ -12,7 +12,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
 
