--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -12,6 +12,21 @@ spring:
             locator:
               enabled: true
               #lower-case-service-id: true
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOriginPatterns:
+              - "*" 
+                            
+            allowedMethods:
+              - GET
+              - POST
+              - PUT
+              - DELETE
+              - PATCH
+              - OPTIONS
+            allowedHeaders: '*'
+            allowCredentials: true
           
       routes:
       # skill-taxonomy service
