--- a/roadmap-service.yml
+++ b/roadmap-service.yml
@@ -1,10 +1,10 @@
 spring:
   application: roadmap-service
-  # datasource:
-  #   url: ${DB_URL}
-  #   username: ${DB_USERNAME}
-  #   password: ${DB_PASSWORD}
-  #   driver-class-name: ${DB_DRIVER_CLASS_NAME}
+  datasource:
+    url: ${DB_URL}
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: ${DB_DRIVER_CLASS_NAME}
 
   jpa:
     hibernate:
