--- a/roadmap-service.yml
+++ b/roadmap-service.yml
@@ -1,5 +1,6 @@
 spring:
-  application: roadmap-service
+  application: 
+    name: roadmap-service
   datasource:
     url: ${DB_URL}
     username: ${DB_USERNAME}
