--- a/roadmap-service.yml
+++ b/roadmap-service.yml
@@ -2,7 +2,7 @@ spring:
   application: 
     name: roadmap-service
   datasource:
-    url: ${DB_URL}
+    url: jdbc:postgresql://localhost:5432/roadmap_service_db
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: ${DB_DRIVER_CLASS_NAME}
