--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -17,24 +17,24 @@ spring:
             allowCredentials: true
       routes:
         # Primary routes using Eureka
-        - id: skill-service-primary
-          uri: lb://skill-service
-          predicates:
-            - Path=/api/v1/tags/**,/api/v1/clusters/**,/api/v1/atoms/**,/api/v1/capsules/**,/api/v1/growth-tracks/**,/api/v1/talent-routes/**,/api/v1/uploads/**
-          filters:
-            - StripPrefix=2
+        # - id: skill-service-primary
+        #   uri: lb://skill-service
+        #   predicates:
+        #     - Path=/api/v1/tags/**,/api/v1/clusters/**,/api/v1/atoms/**,/api/v1/capsules/**,/api/v1/growth-tracks/**,/api/v1/talent-routes/**,/api/v1/uploads/**
+        #   filters:
+        #     - StripPrefix=2
         
-        - id: user-management-primary
-          uri: lb://user-management
-          predicates:
-            - Path=/api/v1/auth/**,/api/v1/register/**,/api/v1/roles/**,/api/v1/users/**
+        # - id: user-management-primary
+        #   uri: lb://user-management
+        #   predicates:
+        #     - Path=/api/v1/auth/**,/api/v1/register/**,/api/v1/roles/**,/api/v1/users/**
         
-        - id: lms-service-primary
-          uri: lb://lms-service
-          predicates:
-            - Path=/api/v1/moodle/**
-          filters:
-            - StripPrefix=2
+        # - id: lms-service-primary
+        #   uri: lb://lms-service
+        #   predicates:
+        #     - Path=/api/v1/moodle/**
+        #   filters:
+        #     - StripPrefix=2
 
         # Fallback routes using Service Connect DNS
         # These will only be used if Eureka routes fail
@@ -58,8 +58,10 @@ spring:
             - StripPrefix=2
 
 eureka:
-  client:
-    service-url:
-      defaultZone: ${EUREKA_CLIENT_URL}
-  instance:
-    prefer-ip-address: true
+  # client:
+  #   service-url:
+  #     defaultZone: ${EUREKA_CLIENT_URL}
+  # instance:
+  #   prefer-ip-address: true
+  register-with-eureka: true
+  fetch-registry: false  # Don't use Eureka for routing
