--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -16,25 +16,84 @@ spring:
             allowedHeaders: '*'
             allowCredentials: true
       routes:
-        Primary routes using Eureka
-        - id: skill-service-primary
+      # skill-taxonomy service
+        - id: skill-service
           uri: lb://skill-service
           predicates:
-            - Path=/api/v1/tags/**,/api/v1/clusters/**,/api/v1/atoms/**,/api/v1/capsules/**,/api/v1/growth-tracks/**,/api/v1/talent-routes/**,/api/v1/uploads/**
+            - Path=/api/v1/tags/**
           filters:
             - StripPrefix=2
-        
-        - id: user-management-primary
+
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/clusters/**
+          filters:
+            - StripPrefix=2
+
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/atoms/**
+          filters:
+            - StripPrefix=2
+
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/capsules/**
+          filters:
+            - StripPrefix=2
+            
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/growth-tracks/**
+          filters:
+            - StripPrefix=2
+            
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/talent-routes/**
+          filters:
+            - StripPrefix=2
+            
+        - id: skill-service
+          uri: lb://skill-service
+          predicates:
+            - Path=/api/v1/uploads/**
+          filters:
+            - StripPrefix=2
+            
+        # user-management service
+        - id: user-management-authentication
           uri: lb://user-management
           predicates:
-            - Path=/api/v1/auth/**,/api/v1/register/**,/api/v1/roles/**,/api/v1/users/**
+            - Path=/api/v1/auth/**
+
+        - id: user-management-registration
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/register/**
         
-        - id: lms-service-primary
+        - id: user-management-roles
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/roles/**
+
+        - id: user-management-profiles
+          uri: lb://user-management
+          predicates:
+            - Path=/api/v1/users/**
+
+      # learning management system service    
+        - id: lms-service
           uri: lb://lms-service
           predicates:
             - Path=/api/v1/moodle/**
           filters:
-            - StripPrefix=2
+            - StripPrefix=2  
 
         # Fallback routes using Service Connect DNS
         # These will only be used if Eureka routes fail
