--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -24,25 +24,24 @@ spring:
             - Path=/api/v1/tags/**,/api/v1/clusters/**,/api/v1/atoms/**,/api/v1/capsules/**,/api/v1/growth-tracks/**,/api/v1/talent-routes/**,/api/v1/uploads/**
           filters:
             - StripPrefix=2
+        
         - id: user-management-fallback
           uri: http://user-management:8090
           predicates:
             - Path=/api/v1/auth/**,/api/v1/register/**,/api/v1/roles/**,/api/v1/users/**
-          filters:  # Fixed indentation
-            - StripPrefix=2
+        
         - id: lms-service-fallback
           uri: http://lms-service:8180
           predicates:
             - Path=/api/v1/moodle/**
           filters:
             - StripPrefix=2
+        
         - id: roadmap-service-fallback
           uri: http://roadmap-service:8110
           predicates:
             - Path=/api/v1/roadmap/**,/api/v1/learner/**
-          filters:
-            - StripPrefix=2
+
 eureka:
-  client:
-    register-with-eureka: false  # Consistent with not using Eureka for routing
+    register-with-eureka: true  # Consistent with not using Eureka for routing
     fetch-registry: false        # Don't use Eureka for routing
